add favorite to service and congfig something
