# user/public/swagger.json
@@ -9,7 +9,7 @@
 		"schemas": {
 			"IUser": {
 				"properties": {
-					"authid": {
+					"authId": {
 						"type": "string"
 					},
 					"username": {
@@ -66,6 +66,23 @@
 		"contact": {}
 	},
 	"paths": {
+		"/v1/user/favorite": {
+			"get": {
+				"operationId": "FindFavoEvent",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
+			}
+		},
 		"/v1/user": {
 			"post": {
 				"operationId": "CreateUser",
@@ -79,9 +96,6 @@
 						}
 					}
 				},
-				"tags": [
-					"User"
-				],
 				"security": [],
 				"parameters": [],
 				"requestBody": {
@@ -107,14 +121,11 @@
 						}
 					}
 				},
-				"tags": [
-					"User"
-				],
 				"security": [],
 				"parameters": []
 			}
 		},
-		"/v1/user/{userId}": {
+		"/v1/user/{id}": {
 			"put": {
 				"operationId": "UpdateProfile",
 				"responses": {
@@ -127,14 +138,11 @@
 						}
 					}
 				},
-				"tags": [
-					"User"
-				],
 				"security": [],
 				"parameters": [
 					{
 						"in": "path",
-						"name": "userId",
+						"name": "id",
 						"required": true,
 						"schema": {
 							"type": "string"
@@ -153,7 +161,7 @@
 				}
 			},
 			"get": {
-				"operationId": "FindUserByAuthid",
+				"operationId": "FindUserByAuthId",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -164,14 +172,11 @@
 						}
 					}
 				},
-				"tags": [
-					"User"
-				],
 				"security": [],
 				"parameters": [
 					{
-						"in": "query",
-						"name": "userId",
+						"in": "path",
+						"name": "id",
 						"required": true,
 						"schema": {
 							"type": "string"
